- Allow 'highlight' source highlighter to use 'python' for Python
  {language} name.  r1142: Update the AsciiDoc 'source' filter to
  allow the use of the 'highlight' source code highlighter.  See
  https://groups.google.com/group/asciidoc/browse_frm/thread/e045c9986c71d72a[discussion
  list].
+
NOTE: The 'pygments' attribute has been deprecated in favor of the new
'source-highlighter' attribute.
- Vim syntax highlighter: Don't confuse trailing open block delimiter
  with section underline.
- Added 'skip' option to paragraphs (c.f. Delimited Block 'skip'
  option).

.Bug fixes
- *FIXED*: latex, music and graphviz filters: When the filter output
  image is data-uri encoded write it to the indir (instead of the
  outdir) so that encoder can find it. See
  https://groups.google.com/group/asciidoc/browse_thread/thread/f5174f450a61f14b[discussion
  list].
- *FIXED*: Escape the ']' character inside inline macros.  See
  https://groups.google.com/group/asciidoc/browse_thread/thread/db3b734a6931cb74[discussion
  list].
- *FIXED*: source highlighter filter: Pass 'role' attribute to HTML
  backends.
- *FIXED*: source highlight filter: docbook backend: 'role' attribute
  was not passed to listings without a title. Patch submitted by Lex
  Trotman. See
  https://groups.google.com/group/asciidoc/browse_thread/thread/13c9ee97930342b3[discussion
  list].


Version 8.6.7 (2012-03-17)
--------------------------
.Release highlights
No major enhancements but quite a few bug fixes which, among other
things, fixes Jython compatibility and improves Windows compatibility.

.All additions and changes
- Vim syntax highlighter: highlight entity refs in macro arguments.
- Added files with `.asciidoc` extension to Vim file type detection.
  http://groups.google.com/group/asciidoc/browse_thread/thread/a9762e21ec0cc244/5d3a4ebf20e6847e[Patch]
  submitted by Dag Wiers.
- Added 'replacement3' substitution to enable