@@ -65,7 +65,7 @@ This example contains LilyPond musical markup.
 .....................................................................
 [music]
 ---------------------------------------------------------------------
-\version "2.10.0"
+\version "2.14.2"
 \paper {
  ragged-right = ##t
 }
@@ -81,7 +81,7 @@ Renders:
 
 [music]
 ---------------------------------------------------------------------
-\version "2.10.0"
+\version "2.14.2"
 \paper {
   ragged-right = ##t
 }
